--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-  <string name="app_name">DotStar</string>
   <string name="title_preset_detail">Preset Detail</string>
-  <string name="action_settings">Settings</string>
+  <string name="action_info">Info</string>
   <string name="navigation_drawer_open">Open navigation drawer</string>
   <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
